# RLinf

AlohaMini/: .gitignore  README.md
AlohaMini/.marscode/: deviceInfo.json
AlohaMini/docs/: BOM.md
AlohaMini/hardware/mobile_base/step/: OB_Z_Axis_Bracket.stp  (+3 more)
AlohaMini/maniskill/: README.md  install.py  pyproject.toml  setup.py
AlohaMini/maniskill/agents/aloha_mini/: __init__.py  aloha_mini_so100_v2.py  base_agent.py
AlohaMini/maniskill/aloha_mini/: __init__.py  aloha_mini.py  aloha_mini.urdf  envs.py
AlohaMini/maniskill/assets/robots/aloha_mini/: maniskill_so100_version.abs.urdf  maniskill_so100_version.urdf
AlohaMini/maniskill/examples/: demo_ee_keyboard.py  run_replicacad.py  test_robot.py
AlohaMini/maniskill/scene_builder/replicacad/: scene_builder.py
AlohaMini/maniskill/teleop/: .gitignore  __init__.py  config.py  controller.py  demo_teleop.py  demo_vr_teleop_stream.py  utils.py
AlohaMini/maniskill/teleop/inputs/: __init__.py  base.py  keyboard_controller.py  vr_ws_server.py  vr_ws_server_with_mobile.py
AlohaMini/maniskill/teleop/kinematics/: __init__.py  aloha_mini_kinematics.py  so100_kinematics.py  so100_kinematics_v2.py
AlohaMini/maniskill/teleop/web_ui/: index.html  styles.css  vr_app.js
AlohaMini/maniskill/teleop/web_ui_stream/: index.html
AlohaMini/software/: README.md
docs/develop_alohamini/: realworld_alohamini.md
examples/embodiment/config/: maniskill_sac_flow_image_aloha_leftarm.yaml
rlinf/: config.py
rlinf/envs/: action_utils.py
rlinf/envs/maniskill/: maniskill_env.py
rlinf/workers/actor/: fsdp_sac_policy_worker.py
(+5 files in other folders)
