[project]
name = "aloha-mini-maniskill"
version = "0.1.0"
description = "AlohaMini dual-arm mobile robot integration for ManiSkill3"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "mani-skill>=3.0.0",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
teleop = [
    "pygame",
    "websockets",
    "Pillow",
]
dev = [
    "pygame",
    "websockets",
    "Pillow",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "aloha_mini", "teleop"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
